--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="css/dashboard.css" rel="stylesheet">
 </head>
 
@@ -71,7 +71,7 @@
 
   		  <div class="collapse navbar-collapse navbar-ex1-collapse">
   		  	<button type="button" data-toggle="modal" href="#modal-about" class="btn btn-default navbar-btn"><i class="glyphicon glyphicon-info-sign"></i> About</button>
-  		  	<a href="http://www.dasoft.ch" class="btn btn-default navbar-btn"><i class="glyphicon glyphicon-link"></i> dasoft.ch</a>
+  		  	<a href="https://www.dasoft.ch" class="btn btn-default navbar-btn"><i class="glyphicon glyphicon-link"></i> dasoft.ch</a>
 		  </div>
 		</nav>
 	</div>
@@ -112,18 +112,12 @@
 		</div>
 		</div>
 	</script>
-	<script src="js/libs/jquery.min.js" type="text/javascript"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="js/libs/mustache.js" type="text/javascript"></script>
-	<script src="js/libs/date.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js" integrity="sha256-MPgtcamIpCPKRRm1ppJHkvtNBAuE71xcOM+MmQytXi8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js" integrity="sha256-xljKCznmrf+eJGt+Yxyo+Z3KHpxlppBZSjyDlutbOh0=" crossorigin="anonymous"></script>
 	<script src="js/config.js" type="text/javascript"></script>
-	<!-- google chart biscuits -->
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript">
-      // Load the Visualization API and the controls package.
-      google.load('visualization', '1.0', {'packages':['controls']});
-    </script>
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
