error handling for API

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 			</p>
 		</div>
 		
+		<!-- error handling -->
+		<div id="error" class="alert alert-danger collapse" role="alert"></div>
+
 		<!-- progress bar of loaded servers -->
 		<div class="progress">
 			<div class="progress-bar progress-striped bg loading" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
@@ -30,9 +33,9 @@
 		<br />
 		<div class="row">
 			<div class="col-md-auto">
+				
 		<!-- count down timer + progress bar -->
-		
-			<i class="fa fa-refresh"></i> <span id="last-update"></span>
+			<i class="fa fa-refresh"></i>
 			</div>
 			<div class="col">
 				<div id="progressBar" class="progress">
@@ -41,9 +44,6 @@
 			</div>
 
 		</div>
-
-
-
 
 		<!-- modal windows-->
 		<div id="modal-about" class="modal fade">
